2010-02-17  Sergio Villar Senin  <svillar@igalia.com>

	* libtinymail-camel/camel-lite/camel/providers/imap/camel-imap-folder.c (imap_update_summary):
	removed CAMEL_MESSAGE_INFO_HEADERS. Retrieve ENVELOPE and
	BODYSTRUCTURE instead of HEADERS when retrieving folder summary
	for IMAP folders.
	(parse_fetch_response): added support to parse BODYSTRUCTURE and
	ENVELOPE in responses

	* libtinymail-camel/camel-lite/bs/envelope.h:
	* libtinymail-camel/camel-lite/bs/bodystruct.c (envelope_parse):
	envelope parsing returns now a pointer to the last parsed element

2010-02-17  Sergio Villar Senin  <svillar@igalia.com>

	* camel/providers/imap/camel-imap-folder.c (imap_fetch_structure):
	fixed a memory leak

2010-02-10  Jose Dapena Paz  <jdapena@igalia.com>

	* libtinymailui-gtk/tny-gtk-header-list-model.c:
	new method tny_gtk_header_list_model_set_update_in_batches
	to change the way headers are exposed to tree model. It
	sets the number of headers that will be added to tree model
	per batch. By default it's 3000 (old behavior). You can set
	a lower value to make ui more responsive.

2010-02-10  Sergio Villar Senin  <svillar@igalia.com>

	* libtinymail-moblin/Makefile.am
	(libtinymail_moblin_1_0_la_SOURCES): added
	tny-moblin-plaform-factory.c and tny-moblin-account-store.c

	* libtinymail-moblin/tny-moblin-account-store.c:
	* libtinymail-moblin/tny-moblin-account-store.h:
	* libtinymail-moblin/tny-moblin-platform-factory.c:
	* libtinymail-moblin/tny-moblin-platform-factory.h: new files

	* README: added Moblin as supported platform

2010-02-09  Sergio Villar Senin  <svillar@igalia.com>

	Added first implementation of a TnyDevice that uses Moblin's
	Connection Manager.

	Now Moblin is another platform supported in tinymail.

	* libtinymail-moblin/Makefile.am:
	* libtinymail-moblin/libtinymail-moblin.pc.in:
	* libtinymail-moblin/tny-moblin-device.c:
	* libtinymail-moblin/tny-moblin-device.h: new files to support
	Moblin's Connection Manager based TnyDevice
